objects/Parker_Pen__c.object
<CustomObject>
    <label>Parker Pen</label>
    <nameField>
        <label>Pen Customer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Parker Pens</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Discount_Info__c</fullName>
        <label>Discount Info</label>
        <length>100</length>
        <type>Text</type>
    </fields>
</CustomObject>